[project]
name = "openai-clone"
version = "0.1.0"
description = "Real-time Voice & Deep Memory AI — Hybrid Graph-Vector RAG"
requires-python = ">=3.11"
readme = "Readme.md"
license = { text = "MIT" }

dependencies = [
    # --- Web Framework ---
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
    # --- Database & ORM ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "fastcrud>=0.15.0",
    "pgvector>=0.3.0",
    # --- Validation & Settings ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.9.0",
    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    # --- AI / LLM ---
    "openai>=1.50.0",
    "crewai[tools]>=1.10.1",
    "mem0ai>=1.0.5",
    # --- Graph Database ---
    "neo4j>=5.20.0",
    # --- Cache / Session ---
    "redis[hiredis]>=5.0.0",
    # --- Voice ---
    "livekit>=0.17.0",
    "livekit-agents>=0.12.0",
    # --- Observability ---
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ragas>=0.2.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
