[project]
name = "openai-clone"
version = "0.1.0"
description = "Real-time Voice & Deep Memory AI — Hybrid Graph-Vector RAG"
requires-python = ">=3.11,<3.13"
readme = "Readme.md"
license = { text = "MIT" }

dependencies = [
    # --- Web Framework ---
    "fastapi[standard]>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    # --- Database & ORM ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "fastcrud>=0.15.0",
    "pgvector>=0.3.0",
    # --- Validation & Settings ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.9.0",
    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    # --- AI / LLM ---
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "crewai[google-genai,litellm,tools]>=1.10.1",
    "mem0ai>=1.0.5",
    # --- Graph Database ---
    "neo4j>=5.20.0",
    # --- Cache / Session ---
    "redis[hiredis]>=5.0.0",
    # --- LiveKit (token generation only — no otel conflict) ---
    "livekit>=0.17.0",
    "livekit-api>=1.0.0",
    # --- Observability (let crewai pin its own otel version) ---
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.11",
    "langsmith>=0.7.14",
    "openinference-instrumentation-crewai>=1.0.0",
    "openinference-instrumentation-openai>=0.1.41",
    "openinference-instrumentation-google-genai>=0.1.12",
    "langchain-neo4j>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ragas>=0.2.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]
demo = [
    "gradio>=5.0.0",
]
# NOTE: livekit-agents is NOT listed here due to an opentelemetry-sdk
# version conflict with crewai. The voice worker runs as a separate
# process with its own venv. See agents/voice/pyproject.toml.

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
